--- a/core/res/res/values/custom_symbols.xml
+++ b/core/res/res/values/custom_symbols.xml
@@ -30,4 +30,7 @@
      <!-- Power menu -->
      <java-symbol type="array" name="config_rebootActionsList" />
 
+    <!-- Whether the device supports Smart Pixels -->
+    <java-symbol type="bool" name="config_enableSmartPixels" />
+
 </resources>
