SystemUI: correctly handle fastbootd visibility in advanced reboot
* Only show the button for rebooting to fastbootd if the device has fastbootd enabled

Signed-off-by: daniml3 <danimoral1001@gmail.com>
Change-Id: Id42716302bee3e9cf68edefa498c8305b13348c9

--- a/core/res/res/values/x_arrays.xml
+++ b/core/res/res/values/x_arrays.xml
@@ -20,5 +20,6 @@
         <item>reboot_recovery</item>
         <item>reboot_systemui</item>
         <item>reboot_bootloader</item>
+        <item>reboot_fastboot</item>
     </string-array>
 </resources>
