--- a/packages/SystemUI/res/drawable/ic_qs_brightness_medium.xml
+++ b/packages/SystemUI/res/drawable/ic_qs_brightness_medium.xml
@@ -1,20 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:height="24dp"
+<vector
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:name="vector"
     android:width="24dp"
+    android:height="24dp"
     android:viewportWidth="24"
     android:viewportHeight="24">
-
     <path
+        android:name="path"
+        android:pathData="M 18.667 14.758 L 21.425 12 L 18.667 9.242 L 18.667 5.333 L 14.758 5.333 L 12 2.575 L 9.242 5.333 L 5.333 5.333 L 5.333 9.242 L 2.575 12 L 5.333 14.758 L 5.333 18.667 L 9.242 18.667 L 12 21.425 L 14.758 18.667 L 18.667 18.667 L 18.667 14.758 Z M 12 17 L 12 7 C 14.758 7 17 9.242 17 12 C 17 14.758 14.758 17 12 17 Z"
         android:fillColor="?android:attr/colorControlActivated"
-        android:pathData="M11.1 1v3h1.8V1h-1.8z"/>
-
-    <path
-        android:fillColor="?android:attr/colorControlActivated"
-        android:pathData="M12 6.1c-3.258 0-5.9 2.642-5.9 5.9 0 3.259 2.642 5.9 5.9 5.9 3.258 0 5.9-2.641 5.9-5.9 0-3.258-2.641-5.9-5.9-5.9zm0 10c2.264 0 4.1-1.836 4.1-4.1 0-2.264-1.836-4.1-4.1-4.1v8.2z"
         android:fillType="evenOdd"/>
-
-    <path
-        android:fillColor="?android:attr/colorControlActivated"
-        android:pathData="M17.02 5.707l2.122-2.121 1.272 1.273-2.12 2.12-1.273-1.272zM23 11.1h-3v1.8h3v-1.8zm-4.707 5.92l2.121 2.122-1.272 1.272-2.121-2.12 1.272-1.274zM12.9 23v-3h-1.8v3h1.8zm-5.92-4.707l-2.122 2.121-1.272-1.273 2.12-2.12 1.273 1.272zM1 12.9h3v-1.8H1v1.8zm4.707-5.92L3.586 4.857l1.272-1.272 2.121 2.12L5.707 6.98z"/>
 </vector>
